# SimpleTestingPipeline

./: .gitignore  CMakeLists.txt  README.md  install_deps.sh  run_tests.sh
example/: BI_test.cpp
include/: TestCase.h  biginteger.h
src/: CMakeLists.txt  source.cpp
tests/: CMakeLists.txt  tests.cpp
